Added separate Class Library for Models Completed Console UI

--- a/MessageBoard.API/MessagingBoard.API.csproj
+++ b/MessageBoard.API/MessagingBoard.API.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MessagingBoard.Models\MessagingBoard.Models.csproj" />
+  </ItemGroup>
+
 </Project>
